# Twitter-ebac

./: docker-compose.yml  pyproject.toml  pytest.ini
project/: models.py  urls.py  views.py
project/migrations/: 0001_initial.py  0002_alter_profile_bio.py
project/src/css/: style.css
project/static/css/: login.css  style.css
project/static/js/: script.js
project/templates/twitter/: base.html  newsfeed.html  profile.html
twitter/: settings.py
